[package]
name = "project-tree"
version = "0.2.4"
edition = "2021"
categories = ["command-line-utilities", "filesystem"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/conorpo/project-tree"
description = "A command-line utility to display a ascii tree of files and directories."
readme = "README.md"
authors = ["Conor O'Malley"]
keywords = ["tree", "directory", "file", "ascii", "command-line"]

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
clipboard = "0.5.0"

[dev-dependencies]
tempdir = "0.3.7"
